@@ -48,6 +48,9 @@ Features
 Bug Handling
 ------------
 
+* Fixed config error where global `max_pack_idle` setting was the wrong type
+  and was being ignored (#1778).
+
 * Fixed race condition in InputRunner's default deliverer initialization.
 
 * Set hostname correctly in the Graylog decoder (#1663).
